--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
-			            <h1 class="mb-4 mt-3">I'm <span>Flutter Developer</span></h1>
-			            <h2 class="mb-4">A Freelance App Developer</h2>
+			            <h1 class="mb-4 mt-3">I'm <span>Web Backend  Developer</span></h1>
+			            <h2 class="mb-4">A Freelance Web Developer</h2>
 			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="emailto:fzanrmzan@gmail.com" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
