--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Muhammad Faizan</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>February 07, 2003</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>Lahore, Johar Town</span></li>
+		            	<li class="d-flex"><span>Address:</span> <span>171B Block Tech Town Faisalabad</span></li>
 		            	<!-- <li class="d-flex"><span>Zip code:</span> <span>1000</span></li> -->
 		            	<li class="d-flex"><span>Email:</span> <span>fzanrmzan@gmail.com</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>+92306-6660045</span></li>
+		            	<li class="d-flex"><span>Phone: </span> <span>+923117868045</span></li>
 		            </ul>
 		          </div>
 		        </div>
