--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <div class="service-card">
             <div class="img">
               <img
-                src="images/service-icon1.png"
+                src="service-icon1.png"
                 class="w-25 img-fluid img"
                 alt=""
               />
@@ -139,7 +139,7 @@
           <div class="service-card">
             <div class="img">
               <img
-                src="images/service-icon2.png"
+                src="service-icon2.png"
                 class="w-25 img-fluid img"
                 alt=""
               />
@@ -157,7 +157,7 @@
           <div class="service-card">
             <div class="img">
               <img
-                src="images/service-icon3.png"
+                src="service-icon3.png"
                 class="w-25 img-fluid img"
                 alt=""
               />
@@ -183,7 +183,7 @@
             <div class="col-10 col-md-6">
               <div class="progress-card ms-3 ms-md-0">
                 <div class="circular-progress html-css">
-                  <span class="progress-value html-progress">0%</span>
+                  <span class="progress-value html-progress">95%</span>
                 </div>
                 <br />
                 <span class="text">HTML & CSS</span>
@@ -203,7 +203,7 @@
             <div class="col-10 col-md-6">
               <div class="progress-card ms-3 ms-md-0">
                 <div class="circular-progress php">
-                  <span class="progress-value php-progress">0%</span>
+                  <span class="progress-value php-progress"85%</span>
                 </div>
                 <br />
                 <span class="text">Python</span>
@@ -212,7 +212,7 @@
             <div class="col-10 col-md-6 mt-4 mt-md-0">
               <div class="progress-card ms-3  ms-md-0">
                 <div class="circular-progress reactjs">
-                  <span class="progress-value reactjs-progress">0%</span>
+                  <span class="progress-value reactjs-progress">30%</span>
                 </div>
                 <br>
                 <span class="text">PHP</span>
@@ -267,7 +267,7 @@
         <div class="row justify-content-evenly px-4">
           <div class="post col-md-4 game all col-10 mt-3 mt-md-0" data-aos="fade-up">
             <div class="card">
-              <img src="images/dailly ease.jpg" class="card-img-top" alt="..." />
+              <img src="dailly ease.jpg" class="card-img-top" alt="..." />
               <div class="card-body text-center">
                 <h4 class="card-title">Daily ease</h4>
                 <span class="badge bg-secondary badge-pill">HTML&CSS</span>
@@ -282,7 +282,7 @@
           <div class="post col-md-4 website all col-10 mt-3 mt-md-0" data-aos="fade-up">
             <div class="card">
               <img
-                src="images/currency-converter.png"
+                src="currency-converter.png"
                 class="card-img-top"
                 alt="..."
               />
@@ -299,7 +299,7 @@
           </div>
           <div class="post col-md-4 webapp all col-10 mt-3 mt-md-0" data-aos="fade-up">
             <div class="card">
-              <img src="images/dictionary.png" class="card-img-top" alt="..." />
+              <img src="dictionary.png" class="card-img-top" alt="..." />
               <div class="card-body text-center">
                 <h4 class="card-title">Dictionary</h4>
                 <span class="badge bg-secondary badge-pill">HTML&CSS</span>
@@ -316,7 +316,7 @@
           <div class="post col-md-4 all col-10 mt-3 mt-md-0" data-aos="fade-up">
             <div class="card">
               <img
-                src="images/nstar.png"
+                src="nstar.png"
                 class="card-img-top"
                 alt="..."
               />
@@ -457,7 +457,7 @@
         <button href="" class="rounded-pill dribble">
           <i class="bi bi-dribbble"></i>
         </button>
-        <button href="" class="rounded-pill whatsapp">
+        <button href="http://wa.me/03117868045" class="rounded-pill whatsapp">
           <i class="bi bi-whatsapp"></i>
         </button>
         <button href="" class="rounded-pill behance">
