--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
       </div>
       <hr class="text-muted my-4" />
 
-      <p>Copyright 2022 Portfolio | All Rights Reserved.</p>
+      <p>Copyright 2022 Muhammad Faizan | All Rights Reserved.</p>
     </footer>
     <!-- footer section ends here -->
 
