--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"
     />
+    <script src="script.js"></script>
 
     <!-- for adding animation to website we have use AOS library 
     AOS Library css file cdn link -->
