--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <div class="col-10 col-md-6">
               <div class="progress-card ms-3 ms-md-0">
                 <div class="circular-progress php">
-                  <span class="progress-value php-progress"85%</span>
+                  <span class="progress-value php-progress">85%</span>
                 </div>
                 <br />
                 <span class="text">Python</span>
