--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"
     />
-    <script src="script.js"></script>
 
     <!-- for adding animation to website we have use AOS library 
     AOS Library css file cdn link -->
@@ -100,7 +99,7 @@
           <a href="" class="link ms-4 d-none">See My Work</a>
         </div>
         <div class="col-10 col-md-4 d-none d-md-block">
-          <img src="profile.jpeg" class="img-fluid" alt="" />
+          <img src="images/profile.jpeg" class="img-fluid" alt="" />
         </div>
       </div>
     </section>
@@ -120,7 +119,7 @@
           <div class="service-card">
             <div class="img">
               <img
-                src="service-icon1.png"
+                src="images/service-icon1.png"
                 class="w-25 img-fluid img"
                 alt=""
               />
@@ -140,7 +139,7 @@
           <div class="service-card">
             <div class="img">
               <img
-                src="service-icon2.png"
+                src="images/service-icon2.png"
                 class="w-25 img-fluid img"
                 alt=""
               />
@@ -158,7 +157,7 @@
           <div class="service-card">
             <div class="img">
               <img
-                src="service-icon3.png"
+                src="images/service-icon3.png"
                 class="w-25 img-fluid img"
                 alt=""
               />
@@ -184,7 +183,7 @@
             <div class="col-10 col-md-6">
               <div class="progress-card ms-3 ms-md-0">
                 <div class="circular-progress html-css">
-                  <span class="progress-value html-progress">95%</span>
+                  <span class="progress-value html-progress">0%</span>
                 </div>
                 <br />
                 <span class="text">HTML & CSS</span>
@@ -204,7 +203,7 @@
             <div class="col-10 col-md-6">
               <div class="progress-card ms-3 ms-md-0">
                 <div class="circular-progress php">
-                  <span class="progress-value php-progress">85%</span>
+                  <span class="progress-value php-progress">0%</span>
                 </div>
                 <br />
                 <span class="text">Python</span>
@@ -213,7 +212,7 @@
             <div class="col-10 col-md-6 mt-4 mt-md-0">
               <div class="progress-card ms-3  ms-md-0">
                 <div class="circular-progress reactjs">
-                  <span class="progress-value reactjs-progress">30%</span>
+                  <span class="progress-value reactjs-progress">0%</span>
                 </div>
                 <br>
                 <span class="text">PHP</span>
@@ -268,7 +267,7 @@
         <div class="row justify-content-evenly px-4">
           <div class="post col-md-4 game all col-10 mt-3 mt-md-0" data-aos="fade-up">
             <div class="card">
-              <img src="dailly ease.jpg" class="card-img-top" alt="..." />
+              <img src="images/dailly ease.jpg" class="card-img-top" alt="..." />
               <div class="card-body text-center">
                 <h4 class="card-title">Daily ease</h4>
                 <span class="badge bg-secondary badge-pill">HTML&CSS</span>
@@ -283,7 +282,7 @@
           <div class="post col-md-4 website all col-10 mt-3 mt-md-0" data-aos="fade-up">
             <div class="card">
               <img
-                src="currency-converter.png"
+                src="images/currency-converter.png"
                 class="card-img-top"
                 alt="..."
               />
@@ -300,7 +299,7 @@
           </div>
           <div class="post col-md-4 webapp all col-10 mt-3 mt-md-0" data-aos="fade-up">
             <div class="card">
-              <img src="dictionary.png" class="card-img-top" alt="..." />
+              <img src="images/dictionary.png" class="card-img-top" alt="..." />
               <div class="card-body text-center">
                 <h4 class="card-title">Dictionary</h4>
                 <span class="badge bg-secondary badge-pill">HTML&CSS</span>
@@ -317,7 +316,7 @@
           <div class="post col-md-4 all col-10 mt-3 mt-md-0" data-aos="fade-up">
             <div class="card">
               <img
-                src="nstar.png"
+                src="images/nstar.png"
                 class="card-img-top"
                 alt="..."
               />
@@ -458,7 +457,7 @@
         <button href="" class="rounded-pill dribble">
           <i class="bi bi-dribbble"></i>
         </button>
-        <button href="http://wa.me/03117868045" class="rounded-pill whatsapp">
+        <button href="" class="rounded-pill whatsapp">
           <i class="bi bi-whatsapp"></i>
         </button>
         <button href="" class="rounded-pill behance">
@@ -467,7 +466,7 @@
       </div>
       <hr class="text-muted my-4" />
 
-      <p>Copyright 2022 Muhammad Faizan | All Rights Reserved.</p>
+      <p>Copyright 2022 Portfolio | All Rights Reserved.</p>
     </footer>
     <!-- footer section ends here -->
 
