--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <a href="" class="link ms-4 d-none">See My Work</a>
         </div>
         <div class="col-10 col-md-4 d-none d-md-block">
-          <img src="images/profile.jpeg" class="img-fluid" alt="" />
+          <img src="profile.jpeg" class="img-fluid" alt="" />
         </div>
       </div>
     </section>
@@ -267,7 +267,7 @@
         <div class="row justify-content-evenly px-4">
           <div class="post col-md-4 game all col-10 mt-3 mt-md-0" data-aos="fade-up">
             <div class="card">
-              <img src="images/dailly ease.jpg" class="card-img-top" alt="..." />
+              <img src="dailly ease.jpg" class="card-img-top" alt="..." />
               <div class="card-body text-center">
                 <h4 class="card-title">Daily ease</h4>
                 <span class="badge bg-secondary badge-pill">HTML&CSS</span>
@@ -282,7 +282,7 @@
           <div class="post col-md-4 website all col-10 mt-3 mt-md-0" data-aos="fade-up">
             <div class="card">
               <img
-                src="images/currency-converter.png"
+                src="currency-converter.png"
                 class="card-img-top"
                 alt="..."
               />
@@ -299,7 +299,7 @@
           </div>
           <div class="post col-md-4 webapp all col-10 mt-3 mt-md-0" data-aos="fade-up">
             <div class="card">
-              <img src="images/dictionary.png" class="card-img-top" alt="..." />
+              <img src="dictionary.png" class="card-img-top" alt="..." />
               <div class="card-body text-center">
                 <h4 class="card-title">Dictionary</h4>
                 <span class="badge bg-secondary badge-pill">HTML&CSS</span>
@@ -316,7 +316,7 @@
           <div class="post col-md-4 all col-10 mt-3 mt-md-0" data-aos="fade-up">
             <div class="card">
               <img
-                src="images/nstar.png"
+                src="nstar.png"
                 class="card-img-top"
                 alt="..."
               />
