--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <div class="service-card">
             <div class="img">
               <img
-                src="images/service-icon1.png"
+                src="service-icon1.png"
                 class="w-25 img-fluid img"
                 alt=""
               />
@@ -139,7 +139,7 @@
           <div class="service-card">
             <div class="img">
               <img
-                src="images/service-icon2.png"
+                src="service-icon2.png"
                 class="w-25 img-fluid img"
                 alt=""
               />
@@ -157,7 +157,7 @@
           <div class="service-card">
             <div class="img">
               <img
-                src="images/service-icon3.png"
+                src="service-icon3.png"
                 class="w-25 img-fluid img"
                 alt=""
               />
@@ -174,7 +174,40 @@
       </div>
     </section>
     <!-- expertise section ends here -->
+<!-- Education section starts -->
+<section class="expertise mt-5" id="service">
+  <div class="heading text-center">
+    <!-- Education section starts -->
+<section class="education mt-5" id="education">
+  <div class="heading text-center">
+    <small>Education</small>
+    <h3>My Academic Background</h3>
+  </div>
+  <div class="row justify-content-center mt-4">
+    <div class="col-md-6 col-10" data-aos="fade-up">
+      <div class="education-card p-4 border rounded shadow-sm">
+        <h4>BS Computer Science</h4>
+        <p class="text-muted">Riphah International University (2021 - 2025)</p>
+        <p>Focused on web development, databases, and software engineering principles.</p>
+      </div>
+    </div>
+  </div>
+  <div class="row justify-content-center mt-4">
+    <div class="col-md-6 col-10" data-aos="fade-up">
+      <div class="education-card p-4 border rounded shadow-sm">
+        <h4>FSC Pre-Eng </h4>
+        <p class="text-muted">Aspire College Samundri (2018 - 2020)</p>
+        <p>Focused on Basic Engenieering principles.</p>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Education section ends -->
 
+    
+  </div>
+</section>
+<!-- expertise section ends here -->
     <!-- skill section starts -->
     <section class="skill mt-5 py-5" id="about">
       <div class="row justify-content-evenly">
@@ -448,8 +481,6 @@
         <a href="#service">Service</a>
         <div class="vr"></div>
         <a href="#portfolio">Portfolio</a>
-        <div class="vr"></div>
-        <a href="#blog">Blog</a>
         <div class="vr"></div>
         <a href="#contact">Contact</a>
       </div>
